docs: rewrite README with usage, install, credits to original